eks-nginx-linux/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-bilgicloud-ingress
  annotations:
   kubernetes.io/ingress.class: nginx
   cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
  - host: game2048.zapto.org
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: yakuphan-devops
              port:
                number: 80
      
  tls:
      - hosts:
          - game2048.zapto.org
        secretName: tls-2048-bilgicloud
